...
            Reset
          </Button>
          <Button
            mode="contained"
            onPress={handleApply}
            style={styles.applyButton}
            testID="filter-apply-button"
            icon={() => (
              <Image
                source={Assets.icons.checkMark}
                style={[styles.buttonIcon, { tintColor: 'white' }]}
                resizeMode="contain"
              />
...
